[fix]
- SecurityConfig
-- add domain to the list of AllowedOrigins
- control_phone_number.js
-- set width to 250
- about.js
-- wrap emojis in span
-- increase IconButton space
- drawer_menu_xs.js
-- add logout
-- replace Drawer with SwipeableDrawer
-- show user specific items if user.isLoggedIn
- form_login.js
-- Redirect to home in case the login form is open in a separate page and login is successful
- list_books.js
-- decrease padding
-- scroll to top when page changes
- panel_search.js
-- use Accordion to get less space in small screens
- DockerFile.prod
-- fix env argument name for api url
- nginx.conf
-- use ssl
- docker-compose.yml
-- fix react env argument name for api url
-- add ssl folder mapping to react service